--- a/flutter_complete_guide/pubspec.yaml
+++ b/flutter_complete_guide/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
   uuid: ^2.0.4
   intl: ^0.16.1
   shimmer: ^1.1.0
+  flutter_redux: ^0.5.3
+  redux: ^3.0.0
+  redux_logging: ^0.3.0
 
 dev_dependencies:
   flutter_test:
