--- a/flutter_complete_guide/pubspec.yaml
+++ b/flutter_complete_guide/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
   uuid: ^2.0.4
   intl: ^0.16.1
   shimmer: ^1.1.0
+  bloc: ^3.0.0
+  flutter_bloc: ^3.2.0
+  equatable: ^1.1.1
 
 dev_dependencies:
   flutter_test:
